# WinDrivesInfo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  astylize.bat
include/: DriveInfo.h  EnumDrives.h
src/: CMakeLists.txt  main.cpp
